--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,15 @@
         "slim/slim": "^2.6",
         "twig/twig": "^1.22",
         "slim/views": "^0.1.3",
-        "illuminate/database": "^5.1"
+        "illuminate/database": "^5.1",
+        "slimcontroller/slimcontroller": "^0.4.3"
     },
 
     "autoload": {
         "files": [
-        			"app/config/config.php"
+        			"app/config/config.php",
+                    "app/config/database.php",
+                    "app/config/routes.php"
         ],
         "classmap" : [
                     "app/models"
