--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "twig/twig": "^1.22",
         "slim/views": "^0.1.3",
         "illuminate/database": "^5.1",
-        "slimcontroller/slimcontroller": "^0.4.3"
+        "slimcontroller/slimcontroller": "^0.4.3",
+        "akrabat/rka-slim-controller": "^2.0"
     },
 
     "autoload": {
@@ -14,7 +15,8 @@
                     "app/config/routes.php"
         ],
         "classmap" : [
-                    "app/models"
+                    "app/models",
+                    "app/controller"
         ]
     }
 
