--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "slim/views": "^0.1.3",
         "illuminate/database": "^5.1",
         "slimcontroller/slimcontroller": "^0.4.3",
-        "akrabat/rka-slim-controller": "^2.0"
+        "akrabat/rka-slim-controller": "^2.0",
+        "slim/csrf": "^0.4.0"
     },
 
     "autoload": {
