--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "slimcontroller/slimcontroller": "^0.4.3",
         "akrabat/rka-slim-controller": "^2.0",
         "slim/csrf": "^0.4.0",
-        "phpmailer/phpmailer": "^5.2"
+        "phpmailer/phpmailer": "^5.2",
+        "rfd/imagemagick": "^1.1"
     },
 
     "autoload": {
